--- a/config_simulations/causal_qlearning_online.yaml
+++ b/config_simulations/causal_qlearning_online.yaml
@@ -1,11 +1,12 @@
 
 'simulation_config':
   'task': 'navigation'
-  'n_episodes': 10
+  'n_episodes': 2
   'n_agents': 4
   'max_steps_env': 1000
-  'n_environments': 1
-  'observability': 'mdp' # 'pomdp'
+  'n_environments': 2
+  'observability': 'pomdp' # 'mdp'
+  'n_sensors': 8
 
 'algo_config':
   'name': 'qlearning'
