--- a/config_simulations/qlearning_vanilla.yaml
+++ b/config_simulations/qlearning_vanilla.yaml
@@ -1,11 +1,12 @@
 
 'simulation_config':
   'task': 'navigation'
-  'n_episodes': 10
+  'n_episodes': 2
   'n_agents': 4
-  'max_steps_env': 200
+  'max_steps_env': 1000
   'n_environments': 1
-  'observability': 'mdp' # 'pomdp'
+  'observability': 'pomdp'
+
 
 'algo_config':
   'name': 'qlearning'
