--- a/config_simulations/transfer_learning_dqn.yaml
+++ b/config_simulations/transfer_learning_dqn.yaml
@@ -6,13 +6,13 @@
   'max_steps_env': 2000
   'n_environments': 1
   'observability': 'mdp'
+  'n_sensors': 12
 
 'algo_config':
-  'name': 'qlearning'
-  'epsilon_start': 1.0
-  'learning_rate': 0.0001
-  'discount_factor': 0.98
-  'min_epsilon': 0.05
+  'name': 'dqn'
+  'epsilon_start': 0.001
+  'min_epsilon': 0.001
+  'transfer_learning': /navigation/results_ok/dqn_mdp.json
 
 #'causality_config':
   #'batch_timestep_update': 1000
