--- a/config_simulations/transfer_learning_ql.yaml
+++ b/config_simulations/transfer_learning_ql.yaml
@@ -1,10 +1,10 @@
 
 'simulation_config':
   'task': 'navigation'
-  'n_episodes': 10
+  'n_episodes': 1
   'n_agents': 4
   'max_steps_env': 2000
-  'n_environments': 10
+  'n_environments': 1
   'observability': 'mdp'
 
 'algo_config':
@@ -13,7 +13,7 @@
   'learning_rate': 0.0001
   'discount_factor': 0.98
   'min_epsilon': 0.001
-  'transfer_learning': True
+  'transfer_learning': /navigation/results_ok/qlearning_mdp.json
 
 #'causality_config':
   #'batch_timestep_update': 1000
