--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 gymnasium~=0.28.1
-PyYAML
+PyYAML~=6.0.1
 chardet
 numpy~=1.23.5
 causalnex~=0.12.1
@@ -15,3 +15,7 @@ pyparsing>=3.0
 statsmodels>=0.13
 opt_einsum>=3.3
 xgboost>=2.0.3
+torch~=2.2.0+cu118
+pyglet~=1.5.27
+six~=1.16.0
+scipy~=1.13.1
