--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-gymnasium~=0.28.1
-PyYAML~=6.0.1
+gymnasium
+PyYAML
 chardet
-numpy~=1.23.5
-causalnex~=0.12.1
-tqdm~=4.66.4
-pandas~=1.5.3
-setuptools~=68.2.0
-networkx~=3.2.1
-matplotlib~=3.9.0
-gym~=0.26.2
-ray~=2.20.0
+numpy
+causalnex
+tqdm
+pandas
+setuptools
+networkx
+matplotlib
+gym
+ray
 causal-learn
 pyparsing>=3.0
 statsmodels>=0.13
 opt_einsum>=3.3
 xgboost>=2.0.3
-torch~=2.2.0+cu118
-pyglet~=1.5.27
-six~=1.16.0
-scipy~=1.13.1
+torch
+pyglet
+six
+scipy
+seaborn
+scikit-learn
+pgmpy
