--- a/config_simulations/config_env.yaml
+++ b/config_simulations/config_env.yaml
@@ -1,6 +1,6 @@
 
 'simulation_config':
-  'task': 'navigation'
+  'task': 'causality_vmas'
   'n_episodes': 1
   'n_agents': 4
   'max_steps_env': 5000
