--- a/causality_vmas/s2_0_params_approximations.yaml
+++ b/causality_vmas/s2_0_params_approximations.yaml
@@ -1,8 +1,8 @@
 
 navigation:
       ROWS: [200000]
-      BINS: [10, 25, 50, 75, 100] # 15, 25, 50
-      SENSORS: [1, 2, 3] # 1, 2, 3
+      BINS: [50, 75, 100]
+      SENSORS: [1, 2, 3]
 
 discovery:
       N_AGENTS: [20, 40]
