--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ causality_vmas/results/
 causality_vmas/results_ok/
 causality_vmas/causal_knowledge/
 causality_vmas/dataframes/
+causality_vmas/dataframes_copy/
+causality_vmas/df_approx_and_info_navigation2/
+causality_vmas/df_approx_and_info_navigation_too_big/
 others/
 
 
