setup final sensitive analysis

--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,8 +1,8 @@
 
 navigation:
-      ROWS: [100000]
-      BINS: [50, 75, 100]
-      RAYS: [3, 4]
+      ROWS: [100000, 500000]
+      BINS: [10, 20, 25, 50, 75]
+      RAYS: [1, 2, 3]
 
 discovery:
       N_AGENTS: [20, 40]
