--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,8 +1,8 @@
 
 navigation:
-      ROWS: [200000]
-      BINS: [10, 20, 30, 40, 50]
-      RAYS: [1, 2, 3, 4]
+      ROWS: [100000]
+      BINS: [10, 20, 30]
+      RAYS: [1, 2, 3]
 
 discovery:
       N_AGENTS: [20, 40]
