last review with stefano

--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,8 +1,8 @@
 
 navigation:
-      ROWS: [25000]
-      BINS: [20]
-      RAYS: [2]
+      ROWS: [100000]
+      BINS: [25, 50]
+      RAYS: [1]
 
 discovery:
       N_AGENTS: [20, 40]
