setup aux class for RL

--- a/causality_vmas/s0_config_features.yaml
+++ b/causality_vmas/s0_config_features.yaml
@@ -15,6 +15,8 @@ discovery:
         2: "PosY"
         3: "VelX"
         4: "VelY"
+        5: error
+        6: errror
         others: "ray"
 
 flocking:
