--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,15 +1,15 @@
 
 navigation:
-      n_rows: [10000]
-      n_bins: [10]
-      n_rays: [1, 2]
+      n_rows: [ 25000, 50000 ]
+      n_bins: [ 10, 15, 20 ]
+      n_rays: [ 1, 2 ]
 
 discovery:
-      n_rows: [10000]
-      n_bins: [10]
-      n_rays: [1, 2]
+      n_rows: [ 25000, 50000 ]
+      n_bins: [ 10, 15, 20 ]
+      n_rays: [ 1, 2 ]
 
 flocking:
-      n_rows: [10000]
-      n_bins: [10]
-      n_rays: [1, 2]
+      n_rows: [ 25000, 50000 ]
+      n_bins: [ 10, 15, 20 ]
+      n_rays: [ 1, 2 ]
