final setup sensitive analysis

--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,15 +1,15 @@
 
 navigation:
-      n_rows: [ 100000 ]
+      n_rows: [ 25000, 100000 ]
       n_bins: [ 10, 15, 20 ]
       n_rays: [ 1, 2 ]
 
 discovery:
-      n_rows: [ 100000 ]
+      n_rows: [ 25000, 100000 ]
       n_bins: [ 10, 15, 20 ]
       n_rays: [ 1, 2 ]
 
 flocking:
-      n_rows: [ 100000 ]
+      n_rows: [ 25000, 100000 ]
       n_bins: [ 10, 15, 20 ]
       n_rays: [ 1, 2 ]
