improving create_causal_table function

--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -17,3 +17,7 @@ flocking:
 give_way:
       n_rows: [ 25000, 100000 ]
       n_bins: [ 10, 15, 20 ]
+
+balance:
+      n_rows: [ 25000, 100000 ]
+      n_bins: [ 10, 15, 20 ]
