improving ciq evaluation

--- a/causality_vmas/config_features.yaml
+++ b/causality_vmas/config_features.yaml
@@ -56,6 +56,7 @@ balance:
 dropout:
     features:
         1:
+            # TODO
 
 wheel:
     features:
@@ -67,3 +68,4 @@ wheel:
         6: "L1y-posY"
         7: "L2x-posX"
         8: "L2y-posY"
+        # TODO
