--- a/causality_vmas/s2_0_params_sensitive_analysis.yaml
+++ b/causality_vmas/s2_0_params_sensitive_analysis.yaml
@@ -1,31 +1,31 @@
 
 navigation:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
       n_rays: [ 1, 2 ]
 
 discovery:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
       n_rays: [ 1, 2 ]
 
 flocking:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
       n_rays: [ 1, 2 ]
 
 give_way:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
 
 balance:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
 
 dropout:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
 
 wheel:
-      n_rows: [ 25000, 100000 ]
-      n_bins: [ 10, 15, 20 ]
+      n_rows: [ 500000, 1000000 ]
+      n_bins: [ 10, 15, 20, 25 ]
