--- a/causality_vmas/s1_0_configs.yaml
+++ b/causality_vmas/s1_0_configs.yaml
@@ -13,6 +13,7 @@ scenario:
         enforce_bounds: True
         continuous_actions: False
         seed: 42
+        pos_shaping_factor: 0.0
 
     discovery:
         continuous_actions: False
